# hermes-jarvis-voice

./: .gitignore  CHANGELOG.md  README.md  SBOM.json  pyproject.toml
skills/jarvis-voice/: SKILL.md
src/hermes_jarvis_voice/: __init__.py  config.py  plugin.py
src/jarvis_voice/: __init__.py  config.py  plugin.py
src/jarvis_voice/telemetry/: __init__.py
tests/: test_smoke.py
tools/: bootstrap.sh
