[build-system]
requires = ["setuptools>=77.0,<83"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-jarvis-voice"
version = "1.0.0"
description = "Jarvis-like voice stack (OWW + STT + LLM + TTS) para hermes-agent"
readme = "README.md"
requires-python = ">=3.11,<3.14"
authors = [{ name = "Will Zapprosite" }]
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
  "hermes-agent>=0.16.0",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.5",
  "pydantic-settings>=2.0",
  "httpx>=0.27",
  "structlog>=24.1",
  "redis>=5.0",
]

[project.optional-dependencies]
voice = [
  "faster-whisper>=1.0.0",
  "openwakeword>=0.6.0",
  "torch>=2.1",
  "sounddevice>=0.4.6",
  "numpy>=1.26",
]
dev = [
  "pytest>=9.0",
  "pytest-asyncio>=0.23",
  "mypy>=1.10",
  "ruff>=0.6",
]

[project.entry-points."hermes_agent.plugins"]
jarvis_voice = "jarvis_voice.plugin:VoicePlugin"

[tool.setuptools.packages.find]
where = ["src"]
